# approximation-algorithms

./: .gitignore  benchmark.py  queens.py  results.txt  two_less.py  two_less_clique.py
DN1/: benchmark.py  queens.py  two_less_clique.py  two_less_naive.py
DN2/: CMakeLists.txt  benchmark.cpp  benchmark.h  benchmarkCli.cpp  main.cpp  options.cpp  options.h  pch.h  solver.cpp  solver.h  solverCli.cpp  timer.cpp  timer.h
DN2/report/: main.tex  plot.py  preamble.tex
DN2/tests/: results-epsilon.txt  results-generated.txt  results-public.txt
DN3/: results.txt  test.sh
DN3/results/: iterations.csv  iterations.py  iterations.txt  results.txt  results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt  results_6.txt  results_7.txt  results_avg.txt
DN3/src/: CMakeLists.txt  options.cpp  options.h  path.cpp  path.h  pch.h  solver.cpp  solver.h  solverCli.cpp  timer.h
DN3/tests/: harary.graph  harary.py
results/: results_8.txt
